--- a/week1/friday/style.css
+++ b/week1/friday/style.css
@@ -7,10 +7,13 @@ margin: 0;
 max-width: 800px;
 }
 
-header{
-  font-size: 20px;
+h1,h2,header,p,.box {
   margin-left: 10%;
   margin-right: 10%;
+}
+
+header{
+  font-size: 20px;
 }
 
 #list1{
@@ -23,23 +26,17 @@ header{
 
 h1{
   font-size: 25px;
-  margin-left: 10%;
-  margin-right: 10%;
 }
 
 h2{
   font-size: 18px;
   font-style: oblique;
-  margin-left: 10%;
-  margin-right: 10%;
 }
 
 p{
   font-size: 15px;
   font-style: oblique;
   font-weight: lighter;
-  margin-left: 10%;
-  margin-right: 10%;
 }
 
 li{
@@ -52,6 +49,4 @@ li{
   box-sizing: border-box;
   width: auto;
   border-top: solid black;
-  margin-left: 10%;
-  margin-right: 10%;
 }
